--- a/spendmanagement-mail-service.csproj
+++ b/spendmanagement-mail-service.csproj
@@ -11,7 +11,17 @@
     <ItemGroup>
         <PackageReference Include="MailKit" Version="4.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.11"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Controllers\WeatherForecastController.cs" />
+      <Compile Remove="WeatherForecast.cs" />
     </ItemGroup>
 
 </Project>
