Add configuration for appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "SmtpHost": "smtp.ethereal.email",
+  "SmtpPort": 587,
+  "EmailUserName": "adrien.rutherford25@ethereal.email",
+  "EmailPassword": "mQzCd3uKA6tm7xvxDF",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
