--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "SmtpHost": "smtp.ethereal.email",
-  "SmtpPort": 587,
-  "EmailUserName": "adrien.rutherford25@ethereal.email",
+  "EmailUsername": "adrien.rutherford25@ethereal.email",
   "EmailPassword": "mQzCd3uKA6tm7xvxDF",
   "Logging": {
     "LogLevel": {
