Add exception for controller.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "SmtpHost": "smtp.ethereal.email",
-  "EmailUsername": "adrien.rutherford25@ethereal.email",
-  "EmailPassword": "mQzCd3uKA6tm7xvxDF",
+  "EmailUsername": "beulah27@ethereal.email",
+  "EmailPassword": "bMPc6pRdm8uHH9VGTy",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
