Add CORS configuration

--- a/spendmanagement-mail-service.csproj
+++ b/spendmanagement-mail-service.csproj
@@ -16,12 +16,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Compile Remove="Controllers\WeatherForecastController.cs" />
       <Compile Remove="WeatherForecast.cs" />
+      <Compile Remove="Controllers\SubscribeEmailController.cs" />
     </ItemGroup>
 
 </Project>
